deployments/salesadmin/k8s/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
    - name: envoy-admin
      protocol: TCP
      port: 9901
      targetPort: 9901
    - name: envoy-proxy
      protocol: TCP
      port: 8080
      targetPort: 8080
