deployments/salesadmin/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.client: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /client(/|$)(.*)
            backend:
              serviceName: client
              servicePort: 4000
          - path: /api(/|$)(.*)
            backend:
              serviceName: envoy
              servicePort: 8080
          - path: /admin(/|$)(.*)
            backend:
              serviceName: envoy
              servicePort: 9901
